mlock ChangeLog


27.04.2015

mlock 0.8

-CLI: added passphrase security hint
-GUI: fixed UTF8 file path handling
-GUI: added passphrase security notification icon

---
17.04.2015

mlock 0.7

-CLI: fixed error message if passphrase or salt prevents decryption
-GUI: replaced QML application by a new Widgets interface
-GUI: mlock-gui may be invoked with a filename as first argument

---
02.04.2015

mlock 0.6

-fixed library linking order in src/makefile
-CLI: added --quiet option
-CLI: added hashing progress output

---
09.03.2015

mlock 0.5

-CLI: fixed progress output
-GUI: added German translation, improved responsiveness

---
23.02.2015

mlock 0.4

-replaced crypto_scrypt call by libsodium's crypto_pwhash_scryptsalsa208sha256_ll
-removed OpenSSL lib dependency

---
12.02.2015

mlock 0.3

-added optional QML GUI

---
21.11.2014

mlock 0.2

-added progress info output
-replaced ftell by ftello and fseek by fseeko
-added --pinentry flag

---
11.11.2014

mlock 0.1

-initial release