@@ -1,0 +1,10 @@
+[Desktop Entry]
+Version=1.0
+Name=mlock
+Type=Application
+Comment=mlock reads and writes encrypted miniLock files.
+Exec=mlock-gui
+TryExec=mlock-gui
+Icon=mlock
+Categories=Utility;TextTools;
+StartupNotify=true
