@@ -1,0 +1,51 @@
+/* XPM */
+static char *dummy[]={
+"32 32 16 1",
+". c #000000",
+"d c #000027",
+"g c #00004d",
+"n c #001b74",
+"k c #003600",
+"h c #00369b",
+"f c #005127",
+"a c #0051c1",
+"i c #006c4d",
+"m c #006ce8",
+"l c #008774",
+"e c #0087e8",
+"c c #00a29b",
+"j c #00a2c1",
+"b c #00a2e8",
+"# c #ffffff",
+"................................",
+".##############################.",
+".#............................#.",
+".#............................#.",
+".#............................#.",
+".#............................#.",
+".#............................#.",
+".#............................#.",
+".#............................#.",
+".#............................#.",
+".#............................#.",
+".#............................#.",
+".#............................#.",
+".#............................#.",
+".#............................#.",
+".#............................#.",
+".#............................#.",
+".#............................#.",
+".#............................#.",
+".#...abbbc.debbbf..gbbbbf.....#.",
+".#...abbbcgbbbbbbfhbbbbbbi....#.",
+".#...abbbjebbbbbbbbbbbbbbbk...#.",
+".#...abbbbbbbbbbbbbbbbbbbbf...#.",
+".#...abbbbl..mbbbbc..abbbbi...#.",
+".#...abbbbk..hbbbbf..nbbbbi...#.",
+".#...abbbbk..hbbbbf..nbbbbi...#.",
+".#...abbbbk..hbbbbf..nbbbbi...#.",
+".#...abbbbk..hbbbbf..nbbbbi...#.",
+".#............................#.",
+".#............................#.",
+".##############################.",
+"................................"};
