@@ -8,6 +8,7 @@ mlock 0.8
 -CLI: added passphrase security hint
 -GUI: fixed UTF8 file path handling
 -GUI: added passphrase security notification icon
+-GUI: added manual
 
 ---
 17.04.2015
